# tree-style-terminal

./: .containerignore  .gitignore  .gitlab-ci.yml  4K-QUICK-START.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONFIG.md  LICENSE  MANIFEST.in  MILESTONE4_COMPLETE.md  MILESTONE5_IMPLEMENTATION_SUMMARY.md  Makefile  PACKAGING.md  README.md  TODO.md  config-example.yaml  demo_milestone2.py  demo_sidebar_controller.py  font_test.py  pyproject.toml  test-auto-config.yaml  test-config.yaml  test_config.py  verify_milestone1.py  verify_milestone2.py  verify_milestone4.py
backlog/: config.yml
backlog/completed/: task-36.10 - Keep-AppImage-runtime-variables-out-of-host-shell-sessions.md
backlog/decisions/: decision-1 - Keep-VTE-as-the-terminal-rendering-engine.md
backlog/tasks/: task-1 - Bug-001-Sidebar-transparency-not-working-with-terminal-transparency.md  task-10 - Add-save-scrollback-action.md  task-11 - Add-command-palette-for-application-actions.md  task-12 - Add-simple-terminal-session-profiles.md  task-13 - Add-workspace-starter-for-project-session-trees.md  task-14 - Define-YAML-layout-templates-for-session-trees.md  task-15 - Add-long-running-command-completion-notifications.md  task-16 - Explore-split-panes-alongside-the-session-tree.md  task-18 - Evaluate-session-resurrection-from-saved-layouts.md  (+62 more)
bugs/: README.md
data/: de.cubigato.treestyleterminal.desktop  de.cubigato.treestyleterminal.metainfo.xml
debian/: changelog  control  copyright  pybuild.testfiles  rules  tree-style-terminal.1  tree-style-terminal.docs  tree-style-terminal.examples  tree-style-terminal.install  tree-style-terminal.links  tree-style-terminal.lintian-overrides  tree-style-terminal.manpages  watch
spikes/: gtk.py  qt.py
tests/: __init__.py  conftest.py  test_ai_command.py  test_basic.py  test_imports.py  test_main_window.py  test_release_metadata.py  test_terminal_widget.py
util/: debug_transparency.py
(+77 files in other folders)
